objects/Test_Drive__c/validationRules/No_Backwards_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Backwards_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Cancelled&quot;),
  ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A completed test drive cannot be cancelled. Please contact your manager.</errorMessage>
</ValidationRule>