objects/Test_Drive__c/validationRules/Notes_Required_On_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Required_On_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    LEN(TRIM(Notes__c)) = 0
  ),
  AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Requested&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Test drive must be Confirmed before Completed. Add meaningful notes before marking complete.</errorMessage>
</ValidationRule>